<resources>
    <string name="app_name">MyTaxi</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="abbosbek">Abbosbek</string>
    <string name="ustaboyev">Ustaboyev</string>
    <string name="trips">Trips</string>
    <string name="payment">Payment</string>
    <string name="favorite_addresses">Favorite addresses</string>
    <string name="_998_90_044_69_79">+998(90) 044-69-79</string>
    <string name="_5a">5a улица Асадуллы Ходжаева</string>
    <string name="qayerga">Куда?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_trips">My Trips</string>
    <string name="_25">25</string>
    <string name="l_771_fa">L 771 FA</string>
    <string name="chevrolet_malibu">Чёрный Chevrolet Malibu</string>
    <string name="sharof_rashidov">улица Sharof Rashidov, Ташкент</string>
    <string name="yordam">Помощь</string>
    <string name="refleshing">Повторить</string>
    <string name="call">Позвонить</string>
    <string name="umid_abdurakhimov">Umid Abdurakhimov</string>
    <string name="reyting">Рейтинг: </string>
    <string name="_5">5 </string>
    <string name="travel">Поездки:</string>
    <string name="_1_885">1 885</string>
    <string name="abbosbek_ustaboyev">Abbosbek Ustaboyev</string>
    <string name="tarif">Тариф</string>
    <string name="biznes">Бизнес</string>
    <string name="oplati">Способ оплаты</string>
    <string name="cash">Наличными</string>
    <string name="_00_45">00:45</string>
    <string name="duration">Продолжительность поездки</string>
    <string name="data_trips">Дата и время поездки</string>
    <string name="_29_19_20">29 Август, 19:20</string>
    <string name="_3917866">3917866</string>
    <string name="order">Заказ №</string>
    <string name="malumotlar">Общие данные</string>
    <string name="cost">Расчёт стоимости</string>
    <string name="min_sum">Минимальная сумма</string>
    <string name="_10_000_uzs">10,000 UZS</string>
    <string name="sum_trips">Сумма поездки</string>
    <string name="_31_645_uzs">31,645 UZS</string>
    <string name="waiting_price">Цена ожидании</string>
    <string name="_0_uzs">0 UZS</string>
    <string name="total">Итого</string>
    <string name="_39_600_uzs">39,600 UZS</string>
</resources>